package main.java.com.utn.rpg.model;

public record RoundResult(boolean gameEnded) {

}
